--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@types/leaflet": "^1.7.11",
+    "colorjs.io": "^0.4.0",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.7",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
@@ -24,7 +27,9 @@
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.1",
+    "jest": "^28.1.3",
     "prettier": "2.7.1",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
