--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/leaflet": "^1.7.11",
     "colorjs.io": "^0.4.0",
     "leaflet": "^1.8.0",
+    "rc-slider": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1"
