--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "rc-slider": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.0.1"
+    "react-leaflet": "^4.0.1",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/jest": "^28.1.7",
