--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.7.11",
+    "chart.js": "^3.9.1",
     "colorjs.io": "^0.4.0",
     "leaflet": "^1.8.0",
     "rc-slider": "^10.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1",
     "react-router-dom": "^6.3.0"
