--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookstate/core": "^4.0.0-rc21",
     "@types/leaflet": "^1.7.11",
     "chart.js": "^3.9.1",
     "colorjs.io": "^0.4.0",
