--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@hookstate/core": "^4.0.0-rc21",
+    "@turf/helpers": "^6.5.0",
+    "@turf/intersect": "^6.5.0",
+    "@turf/points-within-polygon": "^6.5.0",
     "@types/leaflet": "^1.7.11",
     "chart.js": "^3.9.1",
     "colorjs.io": "^0.4.0",
