--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
