--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "serve": "serve -s dist -l 4000"
   },
   "dependencies": {
     "@hookstate/core": "^4.0.0-rc21",
